First try on improving the docs for esp webtools

--- a/home_assistant_glow.yaml
+++ b/home_assistant_glow.yaml
@@ -106,6 +106,7 @@ text_sensor:
   - platform: version
     hide_timestamp: true
     name: '${friendly_name} - ESPHome Version'
+  # WiFi info
   - platform: wifi_info
     ip_address:
       name: '${friendly_name} - IP Address'
